# SQLTMW

./: .gitignore  README.md  TrilhaML.txt
1_SELECT_FROM_WHERE/: 21_select.sql  22_select.py  31_where.sql  32_where.py  42_ex1.py  43_ex1_pd.py  52_ex2.py  62_ex3.py  72_ex4.py  73_ex4_pd.py
2_GROUP_BY/: 12_ex1.py  21_ex2.sql  22_ex2.py  23_ex2_pd.py  31_ex3.sql  32_ex3.py  33_ex3_pd.py  41_ex4.sql  43_ex4_pd.py  51_groupby_1.sql  71_subquery.sql
3_CASE_WHEN_COALECE_LIKE_IN/: 11_ex1.sql  21_ex2.sql  22_ex2_pd.py  31_ex3.sql  32_ex3_pd.py  41_ex4.sql  42_ex4_pd.py  52_orderby_distinct.py  71_case_when_when.sql  72_case_when_when_pd.py  81_coalese.sql  82_coalese_pd.py
4_JOINs/: 11_join.sql  12_join_pd.py  21_join_groupby.sql  22_join_groupby.py  31_join_groupby_where.sql  32_join_groupby_where.py  33_performace.py  41_ex1.sql  51_ex2.sql  61_ex3.sql  71_sellers_sem_vendas.sql
5_Subqueries/: 11_sub1 copy.sql  21_sub2.sql  31_sub3.sql
6_Windows_Functions/: 11_visao_seller.sql  12_visao_seller.py  21_visao_sellers_compra.sql  22_visao_sellers_compra.py
dbutils/: README.md  pyproject.toml
dbutils/dbutils/: __init__.py  connection.py
ep01/: 11_hello.sql  12_hello.py  13_hello_pd.py  23_select_pd.py  33_where_pd.py  41_ex1.sql  51_ex2.sql  53_ex2_pd.py  61_ex3.sql  63_ex3_pd.py  71_ex4.sql  73_ex4_pd.py
ep02/: 11_ex1.sql  13_ex1_pd.py  21_ex2.sql  42_ex4.py  52_groupby_1_pd.py  61_groupby_2.sql  62_groupby_2_pd.py  81_having.sql  82_having_pd.py
ep03/: 12_ex1_pd.py  51_orderby_distinct.sql  61_case_when.sql  62_case_when_pd.py
