[project]
name = "dbutils"
version = "0.1.0"
description = "Funções utilitárias para conexão com banco SQLite via SQLAlchemy"
authors = [
    {name = "Dr. Fabio Medeiros", email = "email@exemplo.com"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "sqlalchemy"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
